--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
 </head>
 
 <body>
+    <section class="hero">
+        <div class="hero_banner">
+            <h1>لورم ایپسوم متن ساختگی نامفهوم از صنعت چاپ</h1>
+            <p>
+                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و
+                متون
+                بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است
+            </p>
+            <a href="#" class="btn btn_hero">مشاهده بیشتر</a>
+        </div>
 
+    </section>
 </body>
 
 </html>
