About Section Added. Styles and HTML

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- Header [Navigation and Hero]-->
     <section class="hero">
         <div class="hero_banner">
             <h1>لورم ایپسوم متن ساختگی نامفهوم از صنعت چاپ</h1>
@@ -24,8 +25,36 @@
             </p>
             <a href="#" class="btn btn_hero">مشاهده بیشتر</a>
         </div>
-
     </section>
+    <!-- Header [Navigation and Hero]-->
+
+    <!-- About Section -->
+     <section class="section">
+        <div class="section_title">
+            <h2>درباره ما</h2>
+        </div>
+        <section class="section_center about_center">
+            <article class="about_article_image">
+                <img class="about_image" src="./src/images/jpg/about.jpg" alt="about image">
+            </article>
+
+            <article class="about_info">
+                <h3 class="about_info_title">لورم ایپسوم متن ساختگی</h3>
+                <p>
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
+                    چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
+                    بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است
+                </p>
+                <p>
+                    لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت
+                    چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون
+                    بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است
+                </p>
+                <a class="btn" href="#">مشاهده بیشتر</a>
+            </article>
+        </section>
+     </section>
+    <!-- About Section -->
 </body>
 
 </html>
