Services Section Added. HTML & Styles.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Header [Navigation and Hero]-->
 
     <!-- About Section -->
-     <section class="section">
+    <section class="section">
         <div class="section_title">
             <h2>درباره ما</h2>
         </div>
@@ -53,8 +53,61 @@
                 <a class="btn" href="#">مشاهده بیشتر</a>
             </article>
         </section>
-     </section>
+    </section>
     <!-- About Section -->
+
+    <!-- Services Section -->
+    <section class="section services">
+        <div class="section_title">
+            <h2>خدمات ما</h2>
+        </div>
+        
+        <div class="section_center services_center">
+            <!-- Service 1 -->
+            <article class="service">
+                <span class="service_icon">
+                    <i class="bi bi-aspect-ratio-fill"></i>
+                </span>
+
+                <div class="service_info">
+                    <h4 class="service_title">لورم ایپسوم</h4>
+                    <p class="service_text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+                        صنعت چاپ و با استفاده از طراحان گرافیک است.
+                    </p>
+                </div>
+            </article>
+            <!-- Service 2 -->
+            <article class="service">
+                <span class="service_icon">
+                    <i class="bi bi-bar-chart-line-fill"></i>
+                </span>
+
+                <div class="service_info">
+                    <h4 class="service_title">لورم ایپسوم</h4>
+                    <p class="service_text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+                        صنعت چاپ و با استفاده از طراحان گرافیک است.
+                    </p>
+                </div>
+            </article>
+            <!-- Service 3 -->
+            <article class="service">
+                <span class="service_icon">
+                    <i class="bi bi-clipboard-data-fill"></i>
+                </span>
+
+                <div class="service_info">
+                    <h4 class="service_title">لورم ایپسوم</h4>
+                    <p class="service_text">
+                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+                        صنعت چاپ و با استفاده از طراحان گرافیک است.
+                    </p>
+                </div>
+            </article>
+        </div>
+    </section>
+    <!-- Services Section -->
 </body>
 
 </html>
