Article Section Added.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="section_title">
             <h2>خدمات ما</h2>
         </div>
-        
+
         <div class="section_center services_center">
             <!-- Service 1 -->
             <article class="service">
@@ -108,6 +108,124 @@
         </div>
     </section>
     <!-- Services Section -->
+
+    <!-- Articles Section -->
+<section class="section">
+            <section class="section-title">
+                <h2>مقالات</h2>
+            </section>
+
+            <section class="section-center articles-center">
+                <article class="article-card">
+                    <div class="article-img-container">
+                        <img class="article-img" src="./src/images/jpg/img-1.jpg" alt="article-img" />
+                        <p class="article-category">طبیعت</p>
+                    </div>
+                    <div class="article-info">
+                        <div class="article-title">
+                            <h4>لورم ایپسوم</h4>
+                            <p>5 دقیقه</p>
+                        </div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+                            صنعت چاپ و با استفاده از طراحان گرافیک است.
+                        </p>
+                        <div class="article-footer">
+                            <p>
+                                <span>
+                                    <i class="bi bi-pencil-square"></i> 
+                                   ساین
+                                </span>
+                            </p>
+                            <a href="#">نمایش</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="article-card">
+                    <div class="article-img-container">
+                        <img class="article-img" src="./src/images/jpg/img-2.jpg" alt="article-img" />
+                        <p class="article-category">طبیعت</p>
+                    </div>
+                    <div class="article-info">
+                        <div class="article-title">
+                            <h4>لورم ایپسوم</h4>
+                        </div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+                            صنعت چاپ و با استفاده از طراحان گرافیک است.
+                        </p>
+                        <div class="article-footer">
+                            <p>
+                                <span>
+                                    <i class="bi bi-pencil-square"></i> 
+                                   ساین
+                                </span>
+                            </p>
+                            <p>7 دقیقه</p>
+                            <a href="#">نمایش</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="article-card">
+                    <div class="article-img-container">
+                        <img class="article-img" src="./src/images/jpg/img-3.jpg" alt="article-img" />
+                        <p class="article-category">طبیعت</p>
+                    </div>
+                    <div class="article-info">
+                        <div class="article-title">
+                            <h4>لورم ایپسوم</h4>
+                        </div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+                            صنعت چاپ و با استفاده از طراحان گرافیک است.
+                        </p>
+                        <div class="article-footer">
+                            <p>
+                                <span>
+                                    <i class="bi bi-pencil-square"></i> 
+                                   ساین
+                                </span>
+                            </p>
+                            <p>6 دقیقه</p>
+                            <a href="#">نمایش</a>
+                        </div>
+                    </div>
+                </article>
+
+                <article class="article-card">
+                    <div class="article-img-container">
+                        <img class="article-img" src="./src/images/jpg/img-4.jpg" alt="article-img" />
+                        <p class="article-category">طبیعت</p>
+                    </div>
+                    <div class="article-info">
+                        <div class="article-title">
+                            <h4>لورم ایپسوم</h4>
+                        </div>
+                        <p>
+                            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از
+                            صنعت چاپ و با استفاده از طراحان گرافیک است.
+                        </p>
+                        <div class="article-footer">
+                            <p>
+                                <span>
+                                    <i class="bi bi-pencil-square"></i> 
+                                   ساین
+                                </span>
+                            </p>
+                            <p>10 دقیقه</p>
+                            <a href="#">نمایش</a>
+                        </div>
+                    </div>
+                </article>
+            </section>
+
+            <div class="article-btn">
+                <a href="#" class="btn">مشاهده تمام مقالات</a>
+            </div>
+        </section>
+    <!-- Articles Section -->
 </body>
 
 </html>
