Article Section Updated.

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
     <!-- Articles Section -->
 <section class="section">
-            <section class="section-title">
+            <section class="section_title">
                 <h2>مقالات</h2>
             </section>
 
