--- a/index.html
+++ b/index.html
@@ -226,6 +226,27 @@
             </div>
         </section>
     <!-- Articles Section -->
-</body>
 
+      <!-- Contact Section -->
+      <section class="section contact">
+        <section class="section-center contact-center">
+            <article class="contact-title">
+                <h3>لورم ایپسوم متن ساختگی با تولید سادگی</h3>
+                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+            </article>
+
+            <form class="contact-form">
+                <input
+                    type="email"
+                    name="email"
+                    class="form-control"
+                    placeholder="ایمیل شما"
+                />
+                <button type="submit" class="btn-submit">ارسال</button>
+            </form>
+        </section>
+    </section>
+
+    <!-- Contact Section -->
+</body>
 </html>
