Gallery Section Added.

--- a/index.html
+++ b/index.html
@@ -248,5 +248,70 @@
     </section>
 
     <!-- Contact Section -->
+
+    <!-- Gallery Section  -->
+
+    <section>
+        <div class="gallery-center">
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-1.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-2.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+            
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-3.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-4.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-5.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-6.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-7.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+
+            <article class="gallery-img-container">
+                <img class="gallery-img" src="./src/images/jpg/img-8.jpg" alt="gallery-img">
+                <a class="gallery-icon" href="#">
+                    <i class="bi bi-search"></i>
+                </a>
+            </article>
+        </div>
+    </section>
+
+    <!-- Gallery Section  -->
+
 </body>
 </html>
